# ChessEngine

./: .gitignore  CMakeLists.txt  main.cpp
board/: board.cpp  board.h  data.cpp  data.h  move.cpp  move.h  position.cpp  position.h
chess/: MoveEngine.cpp  board.cpp  board.h  move.cpp  move.h  moveengine.cpp  moveengine.h  piece.cpp  piece.h  position.cpp  position.h  square.cpp  square.h
chess/data/: move.cpp  move.h  piece.cpp  piece.h  position.cpp  position.h  square.cpp  square.h
chess/parsing/: legalcheck.cpp  legalcheck.h  pseudomovegen.cpp  pseudomovegen.h
